@@ -32,6 +32,7 @@
 
 #include <algorithm>
 #include <typeinfo>
+#include <memory>
 #include <cassert>
 
 using namespace std;
@@ -42,15 +43,16 @@ namespace geom { // geos::geom
 
 LineString::LineString(const LineString &ls)
 	:
-	Geometry(ls.getFactory())
+	Geometry(ls.getFactory()),
+	points(ls.points->clone())
 {
-	points=ls.points->clone();
+	//points=ls.points->clone();
 }
 
 LineString*
 LineString::reverse() const
 {
-	assert(points);
+	assert(points.get());
 	CoordinateSequence* seq = points->clone();
 	CoordinateSequence::reverse(seq);
 	assert(getFactory());
@@ -75,8 +77,8 @@ LineString::LineString(CoordinateSequence *newCoords,
 	Geometry(factory),
 	points(newCoords)
 {
-	if (points==NULL) {
-		points=factory->getCoordinateSequenceFactory()->create(NULL);
+	if (points.get()==NULL) {
+		points.reset(factory->getCoordinateSequenceFactory()->create(NULL));
 		return;
 	}
 
@@ -89,13 +91,13 @@ LineString::LineString(CoordinateSequence *newCoords,
 
 LineString::~LineString()
 {
-	delete points;
+	//delete points;
 }
 
 CoordinateSequence*
 LineString::getCoordinates() const
 {
-	assert(points);
+	assert(points.get());
 	return points->clone();
 	//return points;
 }
@@ -103,20 +105,20 @@ LineString::getCoordinates() const
 const CoordinateSequence*
 LineString::getCoordinatesRO() const
 {
-	return points;
+	return points.get();
 }
 
 const Coordinate&
 LineString::getCoordinateN(int n) const
 {
-	assert(points);
+	assert(points.get());
 	return points->getAt(n);
 }
 
 int
 LineString::getDimension() const
 {
-	return 1;
+	return 1; // change to Dimension::L
 }
 
 int
@@ -131,14 +133,14 @@ LineString::getBoundaryDimension() const
 bool
 LineString::isEmpty() const
 {
-	assert(points);
+	assert(points.get());
 	return points->getSize()==0;
 }
 
 int
 LineString::getNumPoints() const
 {
-	assert(points);
+	assert(points.get());
 	return points->getSize();
 }
 
@@ -146,7 +148,7 @@ Point*
 LineString::getPointN(int n) const
 {
 	assert(getFactory());
-	assert(points);
+	assert(points.get());
 	return getFactory()->createPoint(points->getAt(n));
 }
 
@@ -217,7 +219,7 @@ LineString::getBoundary() const
 bool
 LineString::isCoordinate(Coordinate& pt) const
 {
-	assert(points);
+	assert(points.get());
 	int npts=points->getSize();
 	for (int i = 0; i<npts; i++) {
 		if (points->getAt(i)==pt) {
@@ -239,7 +241,7 @@ LineString::computeEnvelopeInternal() const
 		return new Envelope();
 	}
 
-	assert(points);
+	assert(points.get());
 	const Coordinate& c=points->getAt(0);
 	double minx = c.x;
 	double miny = c.y;
@@ -284,14 +286,14 @@ LineString::equalsExact(const Geometry *other, double tolerance) const
 void
 LineString::apply_rw(const CoordinateFilter *filter)
 {
-	assert(points);
+	assert(points.get());
 	points->apply_rw(filter);
 }
 
 void
 LineString::apply_ro(CoordinateFilter *filter) const
 {
-	assert(points);
+	assert(points.get());
 	points->apply_ro(filter);
 }
 
@@ -311,14 +313,14 @@ void LineString::apply_ro(GeometryFilter *filter) const
 void
 LineString::normalize()
 {
-	assert(points);
+	assert(points.get());
 	int npts=points->getSize();
 	int n=npts/2;
 	for (int i=0; i<n; i++) {
 		int j = npts - 1 - i;
 		if (!(points->getAt(i)==points->getAt(j))) {
 			if (points->getAt(i).compareTo(points->getAt(j)) > 0) {
-				CoordinateSequence::reverse(points);
+				CoordinateSequence::reverse(points.get());
 			}
 			return;
 		}
@@ -353,7 +355,7 @@ LineString::getCoordinate() const
 double
 LineString::getLength() const
 {
-	return CGAlgorithms::length(points);
+	return CGAlgorithms::length(points.get());
 }
 
 void
@@ -381,6 +383,10 @@ LineString::getGeometryTypeId() const
 
 /**********************************************************************
  * $Log$
+ * Revision 1.65  2006/04/10 17:35:44  strk
+ * Changed LineString::points and Point::coordinates to be wrapped
+ * in an auto_ptr<>. This should close bugs #86 and #89
+ *
  * Revision 1.64  2006/04/05 10:25:20  strk
  * Fixed LineString constructor to ensure deletion of CoordinateSequence
  * argument on exception throw
@@ -389,194 +395,6 @@ LineString::getGeometryTypeId() const
  * Added many assertions checking in LineString implementation.
  * Changed ::getCoordinate() to return NULL on empty geom.
  * Changed ::get{Start,End}Point() to return NULL on empty geom.
- *
- * Revision 1.62  2006/03/22 16:58:34  strk
- * Removed (almost) all inclusions of geom.h.
- * Removed obsoleted .cpp files.
- * Fixed a bug in WKTReader not using the provided CoordinateSequence
- * implementation, optimized out some memory allocations.
- *
- * Revision 1.61  2006/03/09 16:46:47  strk
- * geos::geom namespace definition, first pass at headers split
- *
- * Revision 1.60  2006/03/06 19:40:46  strk
- * geos::util namespace. New GeometryCollection::iterator interface, many cleanups.
- *
- * Revision 1.59  2006/03/03 10:46:21  strk
- * Removed 'using namespace' from headers, added missing headers in .cpp files, removed useless includes in headers (bug#46)
- *
- * Revision 1.58  2006/02/19 19:46:49  strk
- * Packages <-> namespaces mapping for most GEOS internal code (uncomplete, but working). Dir-level libs for index/ subdirs.
- *
- * Revision 1.57  2006/02/09 15:52:47  strk
- * GEOSException derived from std::exception; always thrown and cought by const ref.
- *
- * Revision 1.56  2006/02/08 17:18:28  strk
- * - New WKTWriter::toLineString and ::toPoint convenience methods
- * - New IsValidOp::setSelfTouchingRingFormingHoleValid method
- * - New Envelope::centre()
- * - New Envelope::intersection(Envelope)
- * - New Envelope::expandBy(distance, [ydistance])
- * - New LineString::reverse()
- * - New MultiLineString::reverse()
- * - New Geometry::buffer(distance, quadSeg, endCapStyle)
- * - Obsoleted toInternalGeometry/fromInternalGeometry
- * - More const-correctness in Buffer "package"
- *
- * Revision 1.55  2006/01/31 19:07:33  strk
- * - Renamed DefaultCoordinateSequence to CoordinateArraySequence.
- * - Moved GetNumGeometries() and GetGeometryN() interfaces
- *   from GeometryCollection to Geometry class.
- * - Added getAt(int pos, Coordinate &to) funtion to CoordinateSequence class.
- * - Reworked automake scripts to produce a static lib for each subdir and
- *   then link all subsystem's libs togheter
- * - Moved C-API in it's own top-level dir capi/
- * - Moved source/bigtest and source/test to tests/bigtest and test/xmltester
- * - Fixed PointLocator handling of LinearRings
- * - Changed CoordinateArrayFilter to reduce memory copies
- * - Changed UniqueCoordinateArrayFilter to reduce memory copies
- * - Added CGAlgorithms::isPointInRing() version working with
- *   Coordinate::ConstVect type (faster!)
- * - Ported JTS-1.7 version of ConvexHull with big attention to
- *   memory usage optimizations.
- * - Improved XMLTester output and user interface
- * - geos::geom::util namespace used for geom/util stuff
- * - Improved memory use in geos::geom::util::PolygonExtractor
- * - New ShortCircuitedGeometryVisitor class
- * - New operation/predicate package
- *
- * Revision 1.54  2005/12/08 14:14:07  strk
- * ElevationMatrixFilter used for both elevation and Matrix fill,
- * thus removing CoordinateSequence copy in ElevetaionMatrix::add(Geometry *).
- * Changed CoordinateFilter::filter_rw to be a const method: updated
- * all apply_rw() methods to take a const CoordinateFilter.
- *
- * Revision 1.53  2005/12/07 22:52:03  strk
- * Added CoordinateSequence::apply_rw(CoordinateFilter *) and
- * CoordinateSequence::apply_ro(CoordinateFilter *) const
- * to reduce coordinate copies on read-write CoordinateFilter
- * applications (previously required getAt()/setAt() calls).
- * Undefined PROFILE_COORDINATE_COPIES (erroneously left defined by previous commit)
- *
- * Revision 1.52  2005/11/28 18:37:32  strk
- * Minor warning removal
- *
- * Revision 1.51  2005/11/24 23:09:15  strk
- * CoordinateSequence indexes switched from int to the more
- * the correct unsigned int. Optimizations here and there
- * to avoid calling getSize() in loops.
- * Update of all callers is not complete yet.
- *
- * Revision 1.50  2005/11/15 10:02:27  strk
- * optimized envelope computation reducing virtual calls
- *
- * Revision 1.49  2005/11/10 09:33:17  strk
- * Removed virtual overloading LineString::compareTo(LineString *)
- *
- * Revision 1.48  2005/06/23 14:22:33  strk
- * Inlined and added missing ::clone() for Geometry subclasses
- *
- * Revision 1.47  2005/02/22 17:10:47  strk
- * Reduced CoordinateSequence::getSize() calls.
- *
- * Revision 1.46  2004/12/03 22:52:56  strk
- * enforced const return of CoordinateSequence::toVector() method to derivate classes.
- *
- * Revision 1.45  2004/11/23 16:22:49  strk
- * Added ElevationMatrix class and components to do post-processing draping of overlayed geometries.
- *
- * Revision 1.44  2004/09/13 09:07:28  strk
- * Ported fix in LineString::isCoordinate
- *
- * Revision 1.43  2004/09/12 03:51:27  pramsey
- * Casting changes to allow OS/X compilation.
- *
- * Revision 1.42  2004/07/22 08:45:50  strk
- * Documentation updates, memory leaks fixed.
- *
- * Revision 1.41  2004/07/19 13:19:30  strk
- * Documentation fixes
- *
- * Revision 1.40  2004/07/08 19:34:49  strk
- * Mirrored JTS interface of CoordinateSequence, factory and
- * default implementations.
- * Added CoordinateArraySequenceFactory::instance() function.
- *
- * Revision 1.39  2004/07/06 17:58:22  strk
- * Removed deprecated Geometry constructors based on PrecisionModel and
- * SRID specification. Removed SimpleGeometryPrecisionReducer capability
- * of changing Geometry's factory. Reverted Geometry::factory member
- * to be a reference to external factory.
- *
- * Revision 1.38  2004/07/05 14:23:03  strk
- * More documentation cleanups.
- *
- * Revision 1.37  2004/07/05 10:50:20  strk
- * deep-dopy construction taken out of Geometry and implemented only
- * in GeometryFactory.
- * Deep-copy geometry construction takes care of cleaning up copies
- * on exception.
- * Implemented clone() method for CoordinateSequence
- * Changed createMultiPoint(CoordinateSequence) signature to reflect
- * copy semantic (by-ref instead of by-pointer).
- * Cleaned up documentation.
- *
- * Revision 1.36  2004/07/03 12:51:37  strk
- * Documentation cleanups for DoxyGen.
- *
- * Revision 1.35  2004/07/02 13:28:26  strk
- * Fixed all #include lines to reflect headers layout change.
- * Added client application build tips in README.
- *
- * Revision 1.34  2004/07/01 14:12:44  strk
- *
- * Geometry constructors come now in two flavors:
- * 	- deep-copy args (pass-by-reference)
- * 	- take-ownership of args (pass-by-pointer)
- * Same functionality is available through GeometryFactory,
- * including buildGeometry().
- *
- * Revision 1.33  2004/06/28 21:11:43  strk
- * Moved getGeometryTypeId() definitions from geom.h to each geometry module.
- * Added holes argument check in Polygon.cpp.
- *
- * Revision 1.32  2004/06/15 20:38:44  strk
- * updated to respect deep-copy GeometryCollection interface
- *
- * Revision 1.31  2004/05/07 09:05:13  strk
- * Some const correctness added. Fixed bug in GeometryFactory::createMultiPoint
- * to handle NULL CoordinateSequence.
- *
- * Revision 1.30  2004/04/20 13:24:15  strk
- * More leaks removed.
- *
- * Revision 1.29  2004/04/20 08:52:01  strk
- * GeometryFactory and Geometry const correctness.
- * Memory leaks removed from SimpleGeometryPrecisionReducer
- * and GeometryFactory.
- *
- * Revision 1.28  2004/04/10 22:41:24  ybychkov
- * "precision" upgraded to JTS 1.4
- *
- * Revision 1.27  2004/04/01 10:44:33  ybychkov
- * All "geom" classes from JTS 1.3 upgraded to JTS 1.4
- *
- * Revision 1.26  2004/03/31 07:50:37  ybychkov
- * "geom" partially upgraded to JTS 1.4
- *
- * Revision 1.25  2003/11/07 01:23:42  pramsey
- * Add standard CVS headers licence notices and copyrights to all cpp and h
- * files.
- *
- * Revision 1.24  2003/10/31 16:36:04  strk
- * Re-introduced clone() method. Copy constructor could not really replace it.
- *
- * Revision 1.23  2003/10/16 08:50:00  strk
- * Memory leak fixes. Improved performance by mean of more calls to 
- * new getCoordinatesRO() when applicable.
- *
- * Revision 1.22  2003/10/15 09:54:29  strk
- * Added getCoordinatesRO() public method.
  *
  **********************************************************************/
 
