@@ -19,9 +19,11 @@
 
 #include <geos/platform.h> // do we need this ?
 #include <geos/geom/Geometry.h> // for inheritance
+#include <geos/geom/CoordinateSequence.h> // for proper use of auto_ptr<>
 
 #include <string>
 #include <vector>
+#include <memory> // for auto_ptr
 
 #include <geos/inline.h>
 
@@ -153,7 +155,7 @@ protected:
 
 	virtual Envelope* computeEnvelopeInternal() const;
 
-	CoordinateSequence* points;
+	std::auto_ptr<CoordinateSequence> points;
 };
 
 struct LineStringLT {
@@ -174,6 +176,10 @@ struct LineStringLT {
 
 /**********************************************************************
  * $Log$
+ * Revision 1.5  2006/04/10 17:35:44  strk
+ * Changed LineString::points and Point::coordinates to be wrapped
+ * in an auto_ptr<>. This should close bugs #86 and #89
+ *
  * Revision 1.4  2006/04/05 10:25:21  strk
  * Fixed LineString constructor to ensure deletion of CoordinateSequence
  * argument on exception throw
