@@ -17,12 +17,15 @@
 #ifndef GEOS_GEOS_POINT_H
 #define GEOS_GEOS_POINT_H
 
-#include <string>
-#include <vector>
 #include <geos/platform.h>
 #include <geos/geom/Geometry.h>
+#include <geos/geom/CoordinateSequence.h> // for proper use of auto_ptr<>
 
 #include <geos/inline.h>
+
+#include <string>
+#include <vector>
+#include <memory> // for auto_ptr
 
 // Forward declarations
 namespace geos {
@@ -67,9 +70,8 @@ public:
 	virtual ~Point();
 	Geometry *clone() const { return new Point(*this); }
 	CoordinateSequence* getCoordinates(void) const;
-	const CoordinateSequence* getCoordinatesRO() const {
-		return coordinates;
-	}
+	const CoordinateSequence* getCoordinatesRO() const;
+
 	int getNumPoints() const;
 	bool isEmpty() const;
 	bool isSimple() const;
@@ -98,14 +100,19 @@ public:
 
 	bool equalsExact(const Geometry *other, double tolerance=0) const;
 	void normalize(void) { };
+
 protected:
+
 	Envelope* computeEnvelopeInternal() const;
+
 	int compareToSameClass(const Geometry *p) const;
+
 private:
+
 	/**
-	*  The <code>Coordinate</code> wrapped by this <code>Point</code>.
-	*/
-	CoordinateSequence *coordinates;
+	 *  The <code>Coordinate</code> wrapped by this <code>Point</code>.
+	 */
+	std::auto_ptr<CoordinateSequence> coordinates;
 };
 
 } // namespace geos::geom
@@ -119,6 +126,10 @@ private:
 
 /**********************************************************************
  * $Log$
+ * Revision 1.3  2006/04/10 17:35:44  strk
+ * Changed LineString::points and Point::coordinates to be wrapped
+ * in an auto_ptr<>. This should close bugs #86 and #89
+ *
  * Revision 1.2  2006/03/24 09:52:41  strk
  * USE_INLINE => GEOS_INLINE
  *
